Revision history for perl distribution Convos

4.41 Not Released
 - Fix keepalive PING message
 - Fix "Unknown operationId" errors in Operation.js
 - Add "loading" page which will be shown if the backend is not ready
 - Removed last_active and last_read from Dialog
 - Renamed "read" operationIds in OpenAPI spec
 - Mark notifications as read when leaving the "Notifications" page

4.40 2020-09-22T10:06:00+0900
 - Fix line numbers in embedded paste
 - Fix opening links inside embeds in new tab/window
 - Fix Docker on Windows #514
   Contributor: Derzsi Dániel
 - Upgrade Docker Alpine version to 3.12 #513
   Contributor: Derzsi Dániel
 - Bumped LinkEmbedder to v1.14

4.39 2020-09-17T20:19:00+0900
 - Depend on LinkEmbedder v1.13
 - Removed the slash over the notification bell

4.38 2020-09-13T18:31:00+0900
 - Fix typo in renderMessages.js

4.37 2020-09-13T18:22:00+0900
 - Add notification icon on the top of the <SidebarChat/>
 - Add suppport for custom bot password
 - Fix joining dialog when creating connection #512
 - Fix bot Hailo action will not store "nick: ..." prefix
 - Fix using "expandUrlToMedia" setting from user account
 - Change bot to wait one second before replying
 - Change default Hailo engine class to Hailo::Engine::Scored
 - Will only add "has-focus" to message when coming from search or notifications

4.36 2020-09-01T11:12:00+0900
 - Fix clearing dialog messages when loading overlapping messages
 - Fix not loading messages when a dialog already has messages
 - Fix not having #undefined in location when scrolling to "date change" marker
 - Fix not skipping a month when fething messages at end of month

4.35 2020-08-28T12:27:00+0900
 - Fix not following link when clicking on a thumbnail
 - Fix not focusing "search" input on load/routerender
 - Fix searching for messages
 - Changed styling for message that has focus

4.34 2020-08-28T11:35:00+0900
 - Add support for "around" which will load messages faster